# dz_project

./: .coverage — копия  .env.example  .env — копия  .gitignore  README.md  category.html  contacts.html  contacts_add.html  contacts_add.py  imports.py  main.html  menu.html  pyproject.toml  report.html  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_code_generators_py.html  z_a44f0ac069e85531_test_code_py.html
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  operations_re.py  processing.py  read_csv_excel.py  utils.py  widget.py
templates/: catalog.html
tests/: conftest.py  test_code.py  test_code_generators.py  test_decorators.py  test_external_api.py  test_operations_re.py  test_read_csv_excel.py  test_utils.py
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_code_py.html
Архив/: pyproject.toml
Архив/src/: masks.py  widget.py
